--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/minireset.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/animations.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
     <script defer type="text/javascript" src="js/main.js"></script>
 </head>
