fix: :white_check_mark: fix academic condition

--- a/index.html
+++ b/index.html
@@ -31,15 +31,12 @@
             Hi, I'm Eliezer Lorenzo
             </h1>
             <p class="job">
-                Software Engineer Student
+                Software Engineer
             </p>
             <hr class="hr">
             <div class="description">
                 <p>
-                    I am an Engineering student of
-                    Software with layout for
-                    learn and strive to comply
-                    my dreams and goals.
+                    I am a software engineer with knowledge of the technologies used in the market, such as .NET, C#, SQL Server, among others, with a high sense of responsibility and discipline.
                 </p>
             </div>
             <div class="contact">
