--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <figure class="picture">
                 <div class="picture-shadow"></div>
                 <img id="pictureImage" class="picture-image"
-                src="images/eliezer2.jpg"
+                src="images/profile.jpg"
                 alt="Portrait of Eliezer Lorenzo"
                 width="320"
                 height="320">
